students/BulavskiyAndrey/task_02/k8s/overlays/prod/patches/ingress-host.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: app-prod.local
